RESOLVED FIXED 208658
Fix for several failures of LayoutTests in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=208658
Summary Fix for several failures of LayoutTests in isolated tree mode.
Andres Gonzalez
Reported 2020-03-05 12:26:53 PST
Fix for several failures of LayoutTests in isolated tree mode.
Attachments
Patch (7.78 KB, patch)
2020-03-05 12:32 PST, Andres Gonzalez
no flags
Patch (8.16 KB, patch)
2020-03-05 13:23 PST, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-03-05 12:32:44 PST
Andres Gonzalez
Comment 2 2020-03-05 13:23:43 PST
WebKit Commit Bot
Comment 3 2020-03-05 14:29:50 PST
The commit-queue encountered the following flaky tests while processing attachment 392615 [details]: editing/spelling/spellcheck-input-search-crash.html bug 207995 (authors: arv@chromium.org, g.czajkowski@samsung.com, mark.lam@apple.com, and morrita@google.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2020-03-05 14:30:08 PST
The commit-queue encountered the following flaky tests while processing attachment 392615 [details]: editing/spelling/spellcheck-paste-continuous-disabled.html bug 208016 (authors: g.czajkowski@samsung.com and mark.lam@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5 2020-03-05 14:50:36 PST
Comment on attachment 392615 [details] Patch Clearing flags on attachment: 392615 Committed r257948: <https://trac.webkit.org/changeset/257948>
WebKit Commit Bot
Comment 6 2020-03-05 14:50:38 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2020-03-05 14:51:27 PST
Simon Fraser (smfr)
Comment 8 2020-03-05 15:02:15 PST
Comment on attachment 392615 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=392615&action=review > Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:830 > + ScrollView* scrollView() const override; Is this called off the main thread?
Andres Gonzalez
Comment 9 2020-03-05 15:09:48 PST
(In reply to Simon Fraser (smfr) from comment #8) > Comment on attachment 392615 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=392615&action=review > > > Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.h:830 > > + ScrollView* scrollView() const override; > > Is this called off the main thread? no, it is called in a lambda dispatched to the main thread with: return Accessibility::retrieveAutoreleasedValueFromMainThread<id>(...) The implementation in the IsolatedObject will assert if it is not on the main thread.
Note You need to log in before you can comment on or make changes to this bug.