Fix for several failures of LayoutTests in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=208658

Reviewed by Chris Fleizach.

- Exposes the scrollView method through the AXCoreObject interface so
that wrapper code can use it for both AXObjects and IsolatedObjects.
- Fix for a crash/assert where InvalidAXID cannot be passed as key to
the HashMap methods.

* accessibility/AccessibilityObject.h:
* accessibility/AccessibilityObjectInterface.h:
* accessibility/AccessibilityScrollView.h:
* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::scrollView const):
* accessibility/isolatedtree/AXIsolatedObject.h:
* accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::applyPendingChanges):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper scrollViewParent]):
(-[WebAccessibilityObjectWrapper _accessibilityShowContextMenu]):


Canonical link: https://commits.webkit.org/221579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257948 268f45cc-cd09-0410-ab3c-d52691b4dbfc